[tool.poetry]
name = "gaiagent"
version = "0.1.0"
description = ""
authors = ["korotaev <korotaev@kribrum.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
typer = "^0.16.0"
smolagents = {extras = ["audio", "litellm", "toolkit", "vision"], version = "^1.18.0"}
wikipedia-api = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
